[metadata]
name = lh-tool
version = 1.0.0
author = lh9171338
author_email = lihao2015@whu.edu.cn
description = A tool package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lh9171338/lh-tool
project_urls =
    Bug Tracker = https://github.com/lh9171338/lh-tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyEmail
    yacs
    tqdm
    argparse
    imageio
    fitz
    psutil
    xlrd
[options.entry_points]
console_scripts =
        image2video = lh_tool.image2video:main
        video2image = lh_tool.video2image:main
        play_images = lh_tool.play_images:main
        image2pdf = lh_tool.image2pdf:main
        pdf2image = lh_tool.pdf2image:main
        image2gif = lh_tool.image2gif:main
        image2image = lh_tool.image2image:main
        excel2latex = lh_tool.excel2latex:main
        excel2markdown = lh_tool.excel2markdown:main
        startup = lh_tool.startup:main
[options.packages.find]
where = src